--- a/src/index.html
+++ b/src/index.html
@@ -30,5 +30,6 @@
     </main>
 
     <include src="./partials/footer.html"></include>
+    <script src="./js/menu-mobile.js"></script>
   </body>
 </html>
