--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,14 @@
       <include src="./partials/contacts.html"></include>
     </main>
 
-    <include src="./partials/footer.html"></include>
-    <script src="./js/menu-mobile.js"></script>
+    <include src="./partials/footer.html" type="module"></include>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script src="./js/slider.js" type="module"></script>
+    <script src="./js/menu-mobile.js" type="module"></script>
   </body>
 </html>
