--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <include src="./partials/guarantee.html"></include>
       <include src="./partials/reviews.html"></include>
       <include src="./partials/contacts.html"></include>
+      <script type="module" src="./index.js"></script>
     </main>
 
     <include src="./partials/footer.html"></include>
