--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/advantages.html"></include>
-      <include src="./partials/problems.html"></include> -->
+      <include src="./partials/problems.html"></include>
       <include src="./partials/how-we-do.html"></include>
       <include src="./partials/program.html"></include>
       <include src="./partials/benefits.html"></include>
