add all styles and scripts withuot smooth scroll

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
+  <body id="page">
     <include src="./partials/header.html"></include>
 
     <main>
@@ -39,5 +39,6 @@
     ></script>
     <script src="./js/slider.js" type="module"></script>
     <script src="./js/menu-mobile.js" type="module"></script>
+    <script src="./js/header-scroll.js" type="module"></script>
   </body>
 </html>
