--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <body id="page">
     <include src="./partials/header.html"></include>
 
-    <main>
+    <main class="main">
       <include src="./partials/hero.html"></include>
       <include src="./partials/advantages.html"></include>
       <include src="./partials/problems.html"></include>
